Fix layout problem on search page (Closes: #8245)

--- a/wiki/src/local.css
+++ b/wiki/src/local.css
@@ -477,6 +477,11 @@ div.inlinepage {
 	border-top: 0;
 }
 
+/* avoid printing search results below sidebar */
+form {
+	max-width: 45em;
+}
+
 form#searchform {
 	overflow: visible;
 	position: absolute;
